# zed-project-workspace

./: Cargo.toml  README.md  zed-project-workspace.code-workspace
.cargo/: config.toml
.github/workflows/: verify-hook.yml
docs/: 01_research.md  02_architecture.md  03_spec.md  04_deploy_test.md  05_research report.md  06_proposal_design.md  07_implementation_plan.md  08_hook_registry_design.md  09_workspace_identity_pinning.md  10_picker_pin_design.md  11_per_window_workspace_discovery.md  13_compatibility_v0.232.0.md  14_compatibility_v0.233.0.md
src/: discovery.rs  hook_client.rs  hook_registry.rs  lib.rs  lock.rs  mapping.rs  paths.rs  pinning.rs  settings.rs  sync_engine.rs  workspace_db.rs  workspace_file.rs
xtask/: Cargo.toml
xtask/src/: main.rs
zed-prj-workspace-hook/: Cargo.toml  build.rs
zed-prj-workspace-hook/src/: config.rs  discovery.rs  lib.rs  logging.rs  socket_server.rs  symbols.rs  sync.rs
zed-prj-workspace-hook/src/ffi/: dispatch.rs
zed-prj-workspace-hook/src/hooks/: mod.rs  picker_sort.rs  sqlite3_bind.rs  sqlite3_prepare.rs
zed-prj-workspace-mcp/: Cargo.toml
zed-prj-workspace-mcp/src/: main.rs
