[workspace]
members = [".", "zed-prj-workspace-hook", "zed-prj-workspace-mcp", "xtask"]
resolver = "2"

[package]
name = "zed-prj-workspace"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Shared library for Zed workspace file parsing, DB access, and sync engine"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
pathdiff = "0.2"
fs2 = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dylib-hook-registry = { git = "https://github.com/laris/dylib-kit" }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

# Release profile for the hook cdylib — must be at workspace root
[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
