[package]
name = "zed-prj-workspace-hook"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Frida-Gum cdylib injected into Zed for event-driven workspace sync"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed-prj-workspace = { path = ".." }
dylib-hook-registry = { git = "https://github.com/laris/dylib-kit" }
frida-gum = { git = "https://github.com/frida/frida-rust", features = ["auto-download", "invocation-listener"] }
ctor = "0.6"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset"] }

[dev-dependencies]
tempfile = "3"
