[package]
name = "zed-prj-workspace-mcp"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "MCP server for workspace folder sync between .code-workspace files and Zed"

[[bin]]
name = "zed-prj-workspace-mcp"
path = "src/main.rs"

[dependencies]
zed-prj-workspace = { path = ".." }
rmcp = { version = "0.17", features = ["server", "macros", "transport-io"] }
schemars = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
libc = "0.2"
